# prysmatic-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: live_trades.py  quickstart.py
src/prysmatic_sdk/: __init__.py  _base.py  async_client.py  client.py  errors.py  models.py  stream.py
src/prysmatic_sdk/resources/: __init__.py  _transport.py  tokens.py  wallets.py
tests/: test_rest.py  test_stream.py
