[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "prysmatic-sdk"
version = "0.1.0"
description = "Python SDK for the Prysmatic wallet intelligence API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Prysmatic" }
]
keywords = ["solana", "wallets", "trading", "websocket", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://prysmatic-sol.xyz"
Documentation = "https://docs.prysmatic-sol.xyz"

[tool.hatch.build.targets.wheel]
packages = ["src/prysmatic_sdk"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
